[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"

[features]
